--- a/Clustering/Clustering-based-on-city.ipynb
+++ b/Clustering/Clustering-based-on-city.ipynb
@@ -42,8 +42,7 @@
    "outputs": [],
    "source": [
     "# user input\n",
-    "user_input = 'Restaurants'\n",
-    "# u_id = 'McLqvYLBQoCFQikU9dC4cQ'"
+    "user_input = 'Restaurants'\n"
    ]
   },
   {
@@ -63,7 +62,7 @@
    "source": [
     "# initialize business data\n",
     "bcmap = {}\n",
-    "with open('/Users/varunnandu/DMT/dataset/business.json','r') as bf:\n",
+    "with open('business.json','r') as bf:\n",
     "    for line in bf:\n",
     "        l = json.loads(line)\n",
     "        \n",
@@ -98,7 +97,7 @@
     "location = {}\n",
     "bcrmap = {}\n",
     "business_name = {}\n",
-    "with open('/Users/varunnandu/DMT/dataset/business.json','r') as bf:\n",
+    "with open('business.json','r') as bf:\n",
     "    for line in bf:\n",
     "        l = json.loads(line)\n",
     "        key = l['business_id']\n",
@@ -151,7 +150,7 @@
     "ucrmap = {}\n",
     "test_urcmap = {}\n",
     "user_rating = {}\n",
-    "with open('/Users/varunnandu/DMT/dataset/review.json', 'r') as rv:\n",
+    "with open('review.json', 'r') as rv:\n",
     "    for line in rv:\n",
     "        n1 = json.loads(line)\n",
     "        \n",
@@ -1242,7 +1241,7 @@
    ],
    "source": [
     "sorted_by_business = sorted(listCity.items(), key=lambda x: -x[1]['business'])\n",
-    "sorted_by_business"
+    "sorted_by_business[:15]"
    ]
   },
   {
@@ -2266,7 +2265,7 @@
    ],
    "source": [
     "sorted_by_user = sorted(listCity.items(), key=lambda x: -x[1]['user'])\n",
-    "sorted_by_user"
+    "sorted_by_user[:15]"
    ]
   },
   {
@@ -3297,7 +3296,7 @@
     }
    ],
    "source": [
-    "list_city"
+    "list_city[:15]"
    ]
   },
   {
@@ -3387,8 +3386,7 @@
     "    plt.savefig('{}.pdf'.format('average'))\n",
     "    plt.show()\n",
     "    \n",
-    "#     c, coph_dists = scipy.cluster.hierarchy.cophenet(Z, pdist(listV))\n",
-    "#     print(\"c, coph_dists = cophenet(Z, pdist(X)); c is ideally close to one, c=\"+repr(c))\n",
+    "\n",
     "    \n",
     "    #agglomerative clustering using sklearn \n",
     "    data1 = []\n",
@@ -4683,6 +4681,9 @@
     }
    ],
    "source": [
+    "print(\"Average Hit Ratio is :\")\n",
+    "\n",
+    "\n",
     "statistics.mean(hr_list)"
    ]
   },
@@ -4703,6 +4704,9 @@
     }
    ],
    "source": [
+    "print(\"Average NDCG is :\")\n",
+    "\n",
+    "\n",
     "statistics.mean(ndcg_list)"
    ]
   },
